--- a/app/gameboy/index.html
+++ b/app/gameboy/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/favico.jpg" />
+    <link rel="icon" type="image/jpg" href="/gameboy.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameBoy</title>
   </head>
