--- a/app/gameboy/index.html
+++ b/app/gameboy/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="#EBEBEB" />
     <link rel="icon" type="image/jpg" href="/gameboy-min.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />-->
     <title>GameBoy</title>
   </head>
   <body>
