chore: build pwa

--- a/app/gameboy/index.html
+++ b/app/gameboy/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#EBEBEB" />
-    <link rel="icon" type="image/jpg" href="/gameboy-min.jpg" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />-->
     <title>GameBoy</title>
   </head>
   <body>
