--- a/app/gameboy/index.html
+++ b/app/gameboy/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameBoy</title>
   </head>
-  <body>
+  <body class="color-text">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
