feat: polyfill for Symbol.dispose manually
It's available on Chrome only now

--- a/app/gameboy/index.html
+++ b/app/gameboy/index.html
@@ -10,6 +10,9 @@
   </head>
   <body class="color-text">
     <div id="root"></div>
+    <script>
+      if(typeof Symbol.dispose !== 'symbol') Symbol.dispose = Symbol.for('Symbol.dispose');
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
