feat: unocss -> tailwindcss

--- a/app/gameboy/index.html
+++ b/app/gameboy/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameBoy</title>
   </head>
-  <body class="color-text">
+  <body class="text-text">
     <div id="root"></div>
     <script>
       if(typeof Symbol.dispose !== 'symbol') Symbol.dispose = Symbol.for('Symbol.dispose');
